Fix #157 by upgrading predis; Upgraded docker compose; Fixed submit button being cut off

--- a/css/frame.css
+++ b/css/frame.css
@@ -14,7 +14,6 @@ margin-left: -8em;
 }
 
 form .button {
-margin-left: -7em;
 }
 
 
